[package]
name = "fbinfo"
version = "0.1.0"
edition = "2021"
authors = ["Marvin Gudel <github.marvin@gudel.org>"]
description = "A simple tool to display linux framebuffer information"
license = "MIT"
readme = "README.md"
repository = "https://github.com/embediver/fbinfo"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
framebuffer = "0.3.1"
